--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  GKE_CLUSTER: box-be-cluster
+  GKE_CLUSTER: better-staging
   GKE_ZONE: asia-south1
 
 jobs:
