--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Get GKE credentials
       run: |-
-        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE" --project "$PROJECT_ID"
 
     - name: Install Helm
       run: |
