--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  PROJECT_ID: bo-stage
   GKE_CLUSTER: better-staging
   GKE_ZONE: asia-south1
 
