--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -17,19 +17,19 @@ jobs:
     
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Setup Google Cloud CLI
-      uses: google-github-actions/setup-gcloud@v1
+      uses: google-github-actions/setup-gcloud@v0.2.1
       with:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ env.PROJECT_ID }}
-        install_components: 'gke-gcloud-auth-plugin'
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Get GKE credentials
       run: |-
         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE" --project "$PROJECT_ID"
-      
+    - name: Install gke-gcloud-auth-plugin
+    
     - name: Configure kubectl
       run: |
         echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
