--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -23,7 +23,7 @@ jobs:
       uses: google-github-actions/setup-gcloud@v0.2.1
       with:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        project_id: ${{ env.PROJECT_ID }}
 
     - name: Get GKE credentials
       run: |-
