--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -51,7 +51,17 @@ jobs:
 
     - name: Deploy RabbitMQ
       run: |
-        helm upgrade --install rabbitmq-test bitnami/rabbitmq -f $VALUE_PATH --timeout 10m0s --wait --debug
+        helm upgrade --install rabbitmq-test bitnami/rabbitmq -f $VALUE_PATH --timeout 15m0s --wait --debug
+
+    - name: Check Pod Status
+      run: |
+        kubectl get pods -l app.kubernetes.io/name=rabbitmq -o wide
+        kubectl describe pods -l app.kubernetes.io/name=rabbitmq
+        kubectl get events --sort-by=.metadata.creationTimestamp
+
+    - name: Check RabbitMQ Logs
+      run: |
+        kubectl logs -l app.kubernetes.io/name=rabbitmq --all-containers --tail=100
 
     - name: Verify deployment
       run: |
