--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Deploy RabbitMQ
       run: |
-        helm upgrade --install rabbitmq-test bitnami/rabbitmq -f $VALUE_PATH --timeout 15m0s --wait --debug
+        helm upgrade --install rabbitmq-test bitnami/rabbitmq -f $VALUE_PATH
 
     - name: Check Pod Status
       run: |
